[package]
name = "aura-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Single-shot consensus protocol for non-monotone operations in Aura"
include = ["src/**", "Cargo.toml"]

[lints]
workspace = true

[features]
default = []
# Enable simulation mode for deterministic testing with aura-simulator.
# Provides access to simulation-specific effect traits and handlers.
simulation = ["aura-core/simulation"]

[dependencies]
# Workspace crates
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-macros = { path = "../aura-macros", version = "0.1.0" }
aura-journal = { path = "../aura-journal", version = "0.1.0" }
aura-mpst = { path = "../aura-mpst", version = "0.1.0" }
aura-guards = { path = "../aura-guards", version = "0.1.0" }
telltale = { workspace = true }

# Cryptography
frost-ed25519 = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

# Async
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-lock = "3.0"

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
telltale-theory = { workspace = true }
