[package]
name = "hxrts-aura-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Single-shot consensus protocol for non-monotone operations in Aura"
include = ["src/**", "Cargo.toml"]

[lib]
name = "aura_consensus"
[lints]
workspace = true

[features]
default = []
simulation = ["aura-core/simulation"]

[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-macros = { package = "hxrts-aura-macros", path = "../aura-macros", version = "=0.2.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.2.0" }
aura-mpst = { package = "hxrts-aura-mpst", path = "../aura-mpst", version = "=0.2.0" }
aura-guards = { package = "hxrts-aura-guards", path = "../aura-guards", version = "=0.2.0" }
aura-signature = { package = "hxrts-aura-signature", path = "../aura-signature", version = "=0.2.0" }
telltale = { workspace = true }

frost-ed25519 = { workspace = true }
frost-core = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
getrandom = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
subtle = { workspace = true }
zeroize = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-lock = "3.0"

uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
telltale-theory = { workspace = true }
