# Core shared types for Aura - fundamental data structures used across the entire workspace
[package]
name = "aura-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Serialization
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }

# Identifiers
uuid = { workspace = true }

# Utilities
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

# Cryptographic hashing
sha2 = { workspace = true }

# Randomness
rand = { workspace = true }
getrandom = { workspace = true }

# FROST threshold cryptography (for ParticipantId conversion)
frost-core = { workspace = true }
frost-ed25519 = { workspace = true }
curve25519-dalek = { workspace = true }

# Ed25519 signatures for effects
ed25519-dalek = { workspace = true }

# Key derivation
hkdf = { workspace = true }

# Additional serialization for crypto types
serde_bytes = { workspace = true }

# Time utilities
chrono = { workspace = true }
time = { workspace = true }

# Crypto utilities
subtle = { workspace = true }
zeroize = { workspace = true }

# Authorization tokens
biscuit-auth = { workspace = true }

# Property testing (optional)
proptest = { workspace = true, optional = true }

[features]
# Enable proptest integration for property testing
proptest = ["dep:proptest"]
# Enable JSON debug output for development
json-debug = []
default = []

[dev-dependencies]
# For testing
proptest = { workspace = true }
# For benchmarking
criterion = { workspace = true, features = ["async_tokio"] }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[[bench]]
name = "time_system"
harness = false
