[package]
name = "aura-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Foundation types, effect traits, and cryptographic utilities for Aura"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_ipld_dagcbor = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
blake3 = { workspace = true }
rand = { workspace = true }
frost-ed25519 = { workspace = true }
ed25519-dalek = { workspace = true }
paste = "1.0"
time = { workspace = true }
zeroize = { workspace = true }
cfg-if = "1"
biscuit-auth = { workspace = true }
tracing = { workspace = true }
proptest = { workspace = true, optional = true }

[features]
default = []
proptest = ["dep:proptest"]
simulation = []
transparent_onion = []

[dev-dependencies]
proptest = { workspace = true }
trybuild = { workspace = true }
async-trait = { workspace = true }
tracing-subscriber = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true, features = ["async_tokio"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-time = "1"

[[bench]]
name = "time_system"
harness = false

[[bench]]
name = "vectorclock_regression"
harness = false
