# Common cryptographic utilities for secure key/data sealing
[package]
name = "aura-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace crates
aura-core = { path = "../aura-core" }

# Cryptography
aes-gcm = { workspace = true }
zeroize = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
# hpke = { workspace = true } # removed - unused
frost-core = { workspace = true }
frost-ed25519 = { workspace = true }
chacha20poly1305 = { workspace = true }

# Curve operations (transitive dependency from ed25519-dalek but we use it directly)
curve25519-dalek = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
bincode = { workspace = true }
serde_bytes = { workspace = true }
getrandom = { workspace = true }

# Utilities
thiserror = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
# tokio-test = { workspace = true } # removed - unused
proptest = { workspace = true }
serde_json = { workspace = true }
aura-testkit = { path = "../aura-testkit" }
