# Aura Effects - Standard Effect Handler Implementations
[package]
name = "aura-effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Standard library of context-free effect handler implementations"
keywords = ["effects", "handlers", "algebraic-effects", "runtime"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
# Core traits (interface layer)
aura-core = { path = "../aura-core" }

# NOTE: aura-store creates circular dependency (aura-store → aura-protocol → aura-effects)
# Encrypted storage handler belongs in a higher layer
# aura-store = { path = "../aura-store" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"

# Transport libraries
tokio-tungstenite = "0.23"
url = "2.5"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Cryptography
ed25519-dalek = { workspace = true }
frost-ed25519 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
zeroize = { workspace = true }
aes-gcm = { workspace = true }
chacha20 = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }

# Authorization
biscuit-auth = { workspace = true }

# Utilities
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fastrand = "2.1"

[dev-dependencies]
# tokio-test = { workspace = true } # removed - unused
tempfile = { workspace = true }

[features]
default = []
