[package]
name = "aura-effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standard library of context-free effect handler implementations"
keywords = ["effects", "handlers", "algebraic-effects", "runtime"]
categories = ["development-tools"]

[lints]
workspace = true

[features]
default = []
simulation = ["aura-core/simulation"]
telltale-runtime-capability = ["dep:telltale-vm"]

[dependencies]
aura-core = { path = "../aura-core", version = "0.1.0" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = "0.3"
cfg-if = "1"

url = "2.5"

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
postcard = { workspace = true }

ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
snow = "0.9.6"
frost-core = { workspace = true }
frost-ed25519 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_chacha = "0.3"
zeroize = { workspace = true }
aes-gcm = { workspace = true }
chacha20 = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }

biscuit-auth = { workspace = true }

uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fastrand = "2.1"
hex = { workspace = true }
telltale-vm = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs", "net"] }
tokio-tungstenite = "0.23"
socket2 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = { version = "0.6.4", features = ["serde"] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
web-time = "1"
web-sys = { version = "0.3", features = ["Window", "Storage"] }
gloo-timers = { version = "0.3", features = ["futures"] }
