[package]
name = "hxrts-aura-effects"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Standard library of context-free effect handler implementations"
keywords = ["effects", "handlers", "algebraic-effects", "runtime"]
categories = ["development-tools"]

[lib]
name = "aura_effects"
[lints]
workspace = true

[features]
default = []
simulation = ["aura-core/simulation"]
telltale-runtime-capability = ["dep:telltale-machine"]
transparent_onion = ["aura-core/transparent_onion"]

[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }

tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
cfg-if = "1"

url = "2.5"

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
postcard = { workspace = true }

ed25519-dalek = { workspace = true }
curve25519-dalek = { workspace = true }
snow = "0.9.6"
frost-core = { workspace = true }
frost-ed25519 = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
zeroize = { workspace = true }
aes-gcm = { workspace = true }
chacha20 = { workspace = true }
chacha20poly1305 = { workspace = true }
getrandom = { workspace = true }

biscuit-auth = { workspace = true }

uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
fastrand = "2.1"
hex = { workspace = true }
telltale-machine = { workspace = true, optional = true, features = ["multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["fs", "net"] }
tokio-tungstenite = { workspace = true }
socket2 = { workspace = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["linux-native-sync-persistent", "crypto-rust"] }

[target.'cfg(any(target_os = "freebsd", target_os = "openbsd"))'.dependencies]
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
indexed_db_futures = { version = "0.6.4", features = ["serde"] }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-bindgen = { workspace = true }
web-time = "1"
web-sys = { workspace = true, features = ["Window", "Storage"] }
gloo-timers = { version = "0.3", features = ["futures"] }
