[package]
name = "aura-errors"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }

# Dependencies for error context
uuid.workspace = true
time.workspace = true