[package]
name = "aura-frost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-protocol = { path = "../aura-protocol" }
aura-crypto = { path = "../aura-crypto" }
# rumpsteak-aura removed - using effect system pattern instead
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
