[package]
name = "aura-frost"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-effects = { path = "../aura-effects" }
aura-macros = { path = "../aura-macros" }
aura-mpst = { path = "../aura-mpst" }
aura-protocol = { path = "../aura-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
frost-ed25519 = { workspace = true }
rumpsteak-aura-choreography = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
