[package]
name = "aura-guards"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
# Workspace crates
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-authorization = { path = "../aura-authorization", version = "0.1.0" }
aura-mpst = { path = "../aura-mpst", version = "0.1.0" }
aura-journal = { path = "../aura-journal", version = "0.1.0" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }

# Utilities
uuid = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }

# Authorization tokens
biscuit-auth = { workspace = true }

[dev-dependencies]
# Testing infrastructure
proptest = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
