[package]
name = "hxrts-aura-guards"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Guard chain enforcement for authorization, flow budgets, and leakage tracking"

[lib]
name = "aura_guards"
[lints]
workspace = true

[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-authorization = { package = "hxrts-aura-authorization", path = "../aura-authorization", version = "=0.2.0" }
aura-mpst = { package = "hxrts-aura-mpst", path = "../aura-mpst", version = "=0.2.0" }
aura-journal = { package = "hxrts-aura-journal", path = "../aura-journal", version = "=0.2.0" }

serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
biscuit-auth = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
trybuild = { workspace = true }
