[package]
name = "aura-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-instance runtime harness for Aura"
publish = false

[lints]
workspace = true

[features]
default = []
patchbay-backend = ["dep:patchbay"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "aura-harness"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
cfg-if = "1"
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
portable-pty = "0.9"
vt100 = "0.15"
regex = "1.11"
nix = "0.26"
which = "6"
hex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
sysinfo = { workspace = true }
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-app = { path = "../aura-app", version = "0.1.0" }
aura-simulator = { path = "../aura-simulator" }
ctrlc = "3.4"
patchbay = { git = "https://github.com/hxrts/patchbay", branch = "hxrts/aura", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["net"] }
patchbay = { git = "https://github.com/hxrts/patchbay", branch = "hxrts/aura" }
