[package]
name = "aura-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-instance runtime harness for Aura"
publish = false

[lints]
workspace = true

[features]
default = []
patchbay-backend = ["dep:patchbay"]

[lib]
path = "src/lib.rs"

[[bin]]
name = "aura-harness"
path = "src/main.rs"

[dependencies]
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-app = { package = "hxrts-aura-app", path = "../aura-app", version = "=0.2.0" }
aura-simulator = { path = "../aura-simulator" }

anyhow = { workspace = true }
cfg-if = "1"
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
sysinfo = { workspace = true }
portable-pty = "0.9"
vt100 = "0.15"
regex = "1.11"
nix = "0.26"
which = "6"
ctrlc = "3.4"
tempfile = { workspace = true }
patchbay = { git = "https://github.com/n0-computer/patchbay", rev = "f1ef699f1c0c43063382af41de0509c18dea6d0c", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["net"] }
serial_test = "3.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
patchbay = { git = "https://github.com/n0-computer/patchbay", rev = "f1ef699f1c0c43063382af41de0509c18dea6d0c" }
