[package]
name = "aura-identity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-crypto = { path = "../aura-crypto" }
aura-mpst = { path = "../aura-mpst" }
rumpsteak-aura = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
blake3 = { workspace = true }
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lints]
workspace = true
