[package]
name = "aura-interfaces"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
uuid = { version = "1.11", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }

# Error handling

# Types
aura-types = { path = "../aura-types" }

# Async
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1.35", features = ["full"] }
