[package]
name = "aura-invitation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aura-core = { path = "../aura-core" }
aura-effects = { path = "../aura-effects" }
aura-guards = { path = "../aura-guards" }
aura-authorization = { path = "../aura-authorization" }
aura-authentication = { path = "../aura-authentication" }
aura-journal = { path = "../aura-journal" }
aura-composition = { path = "../aura-composition" }
aura-macros = { path = "../aura-macros" }
aura-mpst = { path = "../aura-mpst" }

# Choreography dependencies (required by aura-macros)
rumpsteak-aura-choreography = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
biscuit-auth = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
