[package]
name = "aura-invitation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
include = ["src/**", "Cargo.toml"]

[dependencies]
aura-core = { path = "../aura-core", version = "0.1.0" }
aura-effects = { path = "../aura-effects", version = "0.1.0" }
aura-guards = { path = "../aura-guards", version = "0.1.0" }
aura-authorization = { path = "../aura-authorization", version = "0.1.0" }
aura-authentication = { path = "../aura-authentication", version = "0.1.0" }
aura-journal = { path = "../aura-journal", version = "0.1.0" }
aura-composition = { path = "../aura-composition", version = "0.1.0" }
aura-macros = { path = "../aura-macros", version = "0.1.0" }
aura-mpst = { path = "../aura-mpst", version = "0.1.0" }

# Choreography dependencies (required by aura-macros)
telltale = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
biscuit-auth = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
assert_matches = { workspace = true }

[lints]
workspace = true
