# Event-sourced account journal - CRDT-based event log with derived state
[package]
name = "aura-journal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]

# Internal crates  
aura-core = { path = "../aura-core" }
# aura-wot dependency removed - authorization via effects system only
# aura-macros, aura-mpst, aura-verify dependencies removed - Layer 2 horizontal coupling violations

# Choreography dependencies removed - unused
# Note: Cannot import aura-protocol due to circular dependency (aura-protocol imports journal)
# Protocol types are now available through aura-core
# aura-session-core = { path = "../aura-session-core" }  # For future session types implementation

# CRDT

# Cryptography provided through aura-core effects system
# Cryptographic types now imported through aura-core

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

# Async traits only (runtime dependencies removed for Layer 2 compliance)
async-trait = { workspace = true }

# Utilities
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

# KeyJournal external dependencies
# secret_sharing = { workspace = true }  # Removed due to yanked zeroize dependency - using MVP placeholder
# biscuit-auth = { workspace = true } # removed - unused

[dev-dependencies]
# Test utilities - avoiding aura-testkit which creates architectural violations
# Note: Cannot add aura-protocol directly due to circular dependency (aura-protocol depends on aura-journal)
# Layer 2 tests should be self-contained and not depend on higher layers like aura-agent
async-trait = { workspace = true }
# tokio-test = { workspace = true } # removed - unused
rand_chacha = { workspace = true }
proptest = { workspace = true }
