[package]
name = "aura-journal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fact-based journal storage, validation, and deterministic reduction"

[lints]
workspace = true

[dependencies]
aura-core = { path = "../aura-core", version = "0.1.0" }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
rand_chacha = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "authority_tree_incremental"
harness = false

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { workspace = true }
