[package]
name = "hxrts-aura-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for Aura ownership boundaries and choreography"

[lib]
name = "aura_macros"
proc-macro = true

[features]
default = ["proc-macro"]
proc-macro = []

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits", "visit"] }
telltale = { workspace = true }
telltale-language = { workspace = true }
telltale-theory = { workspace = true }
futures = "0.3"
thiserror = "1.0"
serde_json = { workspace = true }
async-trait = "0.1"
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.1.0" }
aura-mpst = { package = "hxrts-aura-mpst", path = "../aura-mpst", version = "=0.1.0" }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
aura-core = { package = "hxrts-aura-core", version = "=0.1.0", path = "../aura-core" }
trybuild = "1.0"
