[package]
name = "hxrts-aura-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Procedural macros for Aura ownership boundaries and choreography"

[lib]
name = "aura_macros"
proc-macro = true

[features]
default = ["proc-macro"]
proc-macro = []

[dependencies]
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits", "visit"] }
telltale = { workspace = true }
telltale-language = { workspace = true }
telltale-theory = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
aura-core = { package = "hxrts-aura-core", path = "../aura-core", version = "=0.2.0" }
aura-mpst = { package = "hxrts-aura-mpst", path = "../aura-mpst", version = "=0.2.0" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
aura-core = { package = "hxrts-aura-core", version = "=0.2.0", path = "../aura-core" }
aura-journal = { package = "hxrts-aura-journal", version = "=0.2.0", path = "../aura-journal" }
trybuild = { workspace = true }
